@@ -886,25 +886,25 @@ FcCacheMachineSignature ()
 	     "%4x %4x %4x %4x %4x %4x %4x %4x %4x %4x %4x %4x "
 	     "%4x %4x %4x %4x %4x %4x %4x\n", 
 	     m[0], m[1], m[2], m[3],
-	     sizeof (char),
-	     sizeof (char *),
-	     sizeof (int),
-	     sizeof (FcPattern),
-	     sizeof (FcPatternEltPtr),
-	     sizeof (struct _FcPatternElt *),
-	     sizeof (FcPatternElt),
-	     sizeof (FcObjectPtr),
-	     sizeof (FcValueListPtr),
-	     sizeof (FcValue),
-	     sizeof (FcValueBinding),
-	     sizeof (struct _FcValueList *),
-	     sizeof (FcCharSet),
-	     sizeof (FcCharLeaf **),
-	     sizeof (FcChar16 *),
-	     sizeof (FcChar16),
-	     sizeof (FcCharLeaf),
-	     sizeof (FcChar32),
-	     sizeof (FcCache));
+	     (unsigned int)sizeof (char),
+	     (unsigned int)sizeof (char *),
+	     (unsigned int)sizeof (int),
+	     (unsigned int)sizeof (FcPattern),
+	     (unsigned int)sizeof (FcPatternEltPtr),
+	     (unsigned int)sizeof (struct _FcPatternElt *),
+	     (unsigned int)sizeof (FcPatternElt),
+	     (unsigned int)sizeof (FcObjectPtr),
+	     (unsigned int)sizeof (FcValueListPtr),
+	     (unsigned int)sizeof (FcValue),
+	     (unsigned int)sizeof (FcValueBinding),
+	     (unsigned int)sizeof (struct _FcValueList *),
+	     (unsigned int)sizeof (FcCharSet),
+	     (unsigned int)sizeof (FcCharLeaf **),
+	     (unsigned int)sizeof (FcChar16 *),
+	     (unsigned int)sizeof (FcChar16),
+	     (unsigned int)sizeof (FcCharLeaf),
+	     (unsigned int)sizeof (FcChar32),
+	     (unsigned int)sizeof (FcCache));
 
     return buf;
 }
